grammar errors fixed, fixed overflowing boxes

--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@ ul {
 }
 
 .section_content {
-    width: 90%;
+    box-sizing: border-box;
+    width: 100%;
     height: 100%;
     margin: 5px auto;
     padding: 0 6px;
